# eyes

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/cogs/: __init__.py  cmds.py  events.py
src/core/: __init__.py  _bot.py
